feat(downloads): stabilize acquisition pipeline and Grimmory integration